
5.2b1 -> 5.3a1
    - jbj: rpmdigest: use md6sum, not NIST, for MD6 test vectors.
    - jbj: rpmdigest: re-assign digest algo numbers, handle 224/256/384/512/1024
	parameters within the digest algo name.
    - jbj: rpmdigest: add md6 224/256/384/512 (tests failing atm, todo++).
    - jbj: rpmdigest: add cubehash 224/256/384/512.
    - jbj: rpmdigest: add keccak 224/256/384/512.
    - jbj: rpmdigest: add edon-r 224/256/384/512.
    - rpm.org: don't segfault with empty --qf '[]lala' iterator.
    - jbj: rpmdigest: add skein 256/512/1024.
    - jbj: rpmio: eliminate md4, use beecrypt-4.2.0 instead.
    - jbj: rpmsx: wrap getfilecon/lgetfilecon.
    - jbj: rpmsx: add persistent/lazy matchpathcon_{init,free}.
    - jbj: rpmsx: refactor the existing SELinux implementation.
    - jbj: python: fix: missing changelog in repo-md can segfault (David Smid).
    - jbj: rpmdav: oops, WebDAV is different code path, revert some changes.
    - jbj: rpmdav: compute st_nlink correctly for plain HTTP dirs.
    - jbj: rpmavx: fix: alloc an extra byte for pesky trailing '/'.
    - jbj: rpmdav: fix: refill/restart if forward parse runs out of data.
    - jbj: rpmhtml: fix: ... and don't forget to reinitialize all fields.
    - jbj: yarn: convert rpmhtml to usage mutex with refcounts.
    - rse: fix building under RPM_VENDOR_OPENPKG/switch-from-susr-to-musr-on-srpm-install
    - jbj: rpmio: fix: compute url length in rpmGenPath() w/o using pointers.
    - jbj: yarn: convert rpmavx to usage mutex with refcounts.
    - jbj: rename avContext to rpmavx.
    - jbj: rpmio: functional dir stream positioning.
    - jbj: rpmpgp: elimate msg argument, use __FUNCTION__ everywhere instead.
    - jbj: rpmio: eliminate sha224 and ripemd*, use beecrypt-4.2.0 instead.
    - jbj: rpmio: refactor dir stream handling from HTTP/DAV transport.
    - jbj: rpmio: add DIR stream positioning wrappers.
    - jbj: rpmio: add rpmdir.[ch] to refactor DIR handling routines.